--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
     "yup": "^1.3.3"
   },
