--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
