--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.7",
     "@mui/x-data-grid": "^6.19.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "next": "14.1.0",
