--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
+    "stripe": "^15.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
